--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -39,7 +39,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
+                    <a href="tel:+77777777777" class="header__phone" data-modal="action">+7 777 777 77 77</a>
                     <div class="header__burger">
                         <span></span>
                         <span></span>
@@ -101,7 +101,7 @@
                             <div class="services__subtitle">Видеонаблюдение</div>
                         </a>
                     </div>
-                    <button class="btn">Оставить заявку</button>
+                    <button class="btn" data-modal="thanks">Оставить заявку</button>
                 </div>
             </div>
         </section>
@@ -416,6 +416,26 @@
             </div>
         </div>
     </footer>
+
+	<div class="overlay">
+		<div class="modal modal__big" id="action">
+            <div class="modal__close">&times;</div>
+            <div class="modal__top">
+                <img src="img/modal_bg.png" alt="">
+            </div>
+            <div class="modal__title">
+                Подключи объект <br>
+                <span>с 1 января по 14 марта</span> <br>
+                и получи подарок
+            </div>
+            <button class="btn">Оставить заявку</button>
+        </div>
+		<div class="modal modal__mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__title">Ваша заявка <span>отправлена!</span> </div>
+            <div class="modal__subtitle">Мы свяжемся с Вами в течении 15 минут!</div>
+        </div>
+	</div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
