--- a/vityaz/payment.html
+++ b/vityaz/payment.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header__box">
                 <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="#">
+                    <img src="img/page_logo.png" alt="#">
                 </a>
                 <nav class="header__menu">
                     <ul>
